provarAnt/00D1b0000000d5bEAA/objects/SalesIQ__PSTerritory__c.object
<CustomObject>
    <fields>
        <fullName>SalesIQ__B__c</fullName>
        <label>B</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Effective_End_Date__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Effective_Start_Date__c</fullName>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SalesIQ__G__c</fullName>
        <label>G</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesIQ__PSTerritory_Counter__c</fullName>
        <formula>Value(TRIM(RIGHT(RIGHT( SalesIQ__Territory_Id__c ,len(SalesIQ__Territory_Id__c)-FIND(&apos;-&apos;,SalesIQ__Territory_Id__c)),len(RIGHT(SalesIQ__Territory_Id__c,len(SalesIQ__Territory_Id__c)-FIND(&apos;-&apos;,SalesIQ__Territory_Id__c)))- FIND(&apos;-&apos;, RIGHT(SalesIQ__Territory_Id__c,len(SalesIQ__Territory_Id__c)-FIND(&apos;-&apos;,SalesIQ__Territory_Id__c)) ) )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PSTerritory Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesIQ__ParentId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ParentId</label>
        <referenceTo>SalesIQ__PSTerritory__c</referenceTo>
        <relationshipLabel>PSTerritory</relationshipLabel>
        <relationshipName>PSTerritory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Product_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PSTerritory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesIQ__R__c</fullName>
        <label>R</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesIQ__RoleId__c</fullName>
        <label>RoleId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Team_Type__c</fullName>
        <label>Team Type</label>
        <picklist>
            <picklistValues>
                <fullName>Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Territory_Id__c</fullName>
        <label>Territory_Id</label>
        <length>250</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SalesIQ__Territory_Status__c</fullName>
        <label>Territory Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Territory_Type__c</fullName>
        <label>Territory Type</label>
        <picklist>
            <picklistValues>
                <fullName>Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Territory</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>PSTerritory</label>
    <listViews>
        <fullName>SalesIQ__All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>SalesIQ__Territory_Id__c</columns>
        <columns>SalesIQ__Product_Specialist__c</columns>
        <columns>SalesIQ__B__c</columns>
        <columns>SalesIQ__G__c</columns>
        <columns>SalesIQ__R__c</columns>
        <columns>SalesIQ__ParentId__c</columns>
        <columns>SalesIQ__Team_Type__c</columns>
        <columns>SalesIQ__Territory_Type__c</columns>
        <columns>SalesIQ__RoleId__c</columns>
        <columns>SalesIQ__PSTerritory_Counter__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>PSTerritory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PSTerritory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>